Player White Space Issue Resolved

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/collection/body/collectionplayermetadata.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/collection/body/collectionplayermetadata.css
@@ -18,7 +18,7 @@
 .leftPanel {
     width:700px;
    /*  min-height:100%; */
-   	height:650px;
+   	min-height:650px;
     float:left;
     box-sizing:border-box;
     -moz-box-sizing:border-box;
@@ -30,7 +30,7 @@
 .rightPanel {
     width:240px;
    /*  height:100%; */
-    height:650px;
+    min-height:650px;
     float:right;
     padding: 30px 20px 20px 20px;
     box-sizing:border-box;
