--- a/src/main/java/org/ednovo/gooru/client/mvp/play/collection/end/collectionend.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/collection/end/collectionend.css
@@ -17,7 +17,7 @@
 .leftPanel {
     width: 100%;
    /*  min-height:100%; */
-   	height:650px;
+   	min-height:650px;
     float:left;
     box-sizing:border-box;
     -moz-box-sizing:border-box;
@@ -25,11 +25,12 @@
    /*  padding:30px; */
     background:white;
     border-right:1px solid #ddd;
+    padding-bottom:20px;
 }
 .rightPanel {
     width:240px;
    /*  height:100%; */
-    height:650px;
+    min-height:650px;
     float:right;
     padding: 30px 20px 20px 20px;
     box-sizing:border-box;
